add SAT, ACT, and TASC directories

--- a/webTextbooks.html
+++ b/webTextbooks.html
@@ -41,7 +41,7 @@
 <div class="row justify-content-center">
   <!-- first textbook -->
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="arithmetic/index.html"> 
+    <a href="/arithmetic/index.html"> 
       <img src="img/panda.jpg" alt="free arithmetic textbook" style="width:100%">
     </a>
     <div class="card-body">
@@ -50,7 +50,7 @@
   </div>
   <!-- second textbook --> 
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px"> 
-    <a href="pre-algebra/index.html"> 
+    <a href="/pre-algebra/index.html"> 
       <img src="img/huski.jpg" alt="free pre-algebra textbook" style="width:100%">
     </a>
     <div class="card-body">
@@ -59,7 +59,7 @@
   </div>    
   <!-- third textbook -->
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="algebra/index.html">
+    <a href="/algebra/index.html">
       <img src="img/flyingEagle.jpg" alt="free algebra textbook" style="width:100%">
     </a>
     <div class="card-body">
@@ -80,7 +80,7 @@
   </div>
   <!-- fifth textbook -->
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="pre-calculus/index.html">
+    <a href="/pre-calculus/index.html">
       <img src="img/functions.jpg" alt="free pre-calculus textbook" style="width:100%">
     </a>
     <div class="card-body">
@@ -89,7 +89,7 @@
   </div>    
   <!-- sixth textbook -->
   <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="calculus/index.html">
+    <a href="/calculus/index.html">
       <img src="img/spaceShuttle.jpg" alt="free calculus textbook" style="width:100%">
     </a>
     <div class="card-body">
