add hover zoom effect

--- a/flashcards.html
+++ b/flashcards.html
@@ -39,15 +39,15 @@
 <h1> Math Practice Flashcards </h1>
 <div class="row justify-content-center">
   <!-- first card  -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/panda.jpg" alt="arithmetic flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
     </div>
   </div>
   <!-- second card  -->    
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="pre-algebra/pre-algebraFlashCards.html"> 
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <a href="/pre-algebra/pre-algebraFlashCards.html"> 
       <img src="/img/huski.jpg" alt="Pre-algebra flash cards" style="width:100%">
     </a>
     <div class="card-body">
@@ -55,7 +55,7 @@
     </div>
   </div>
   <!-- third card  -->      
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/flyingEagle.jpg" alt="algebra flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Algebra </p>
@@ -65,21 +65,21 @@
 <!-- second row -->
 <div class="row justify-content-center my-4">
   <!-- fourth card  -->                           
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/snail.jpg" alt="geometry flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Geometry </p>
     </div>
   </div>
   <!-- fifth card  -->      
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/functions.jpg" alt="pre-calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Pre-calculus </p>
     </div>
   </div>
   <!-- six card  -->              
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/spaceShuttle.jpg" alt="calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Calculus </p>
@@ -89,21 +89,21 @@
 <!-- third row -->
 <div class="row justify-content-center my-4">
   <!-- seventh card  -->                           
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/SAT.jpg" alt="geometry flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> SAT </p>
     </div>
   </div>
-  <!-- fifth card  -->      
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <!-- eighth card  -->      
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/ACT.jpg" alt="pre-calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> ACT </p>
     </div>
   </div>
-  <!-- six card  -->              
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <!-- ninth card  -->              
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <img src="/img/TASC.jpg" alt="calculus flash cards" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> TASC </p>
