--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <!-- My external .css file -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <style>
+
 </style>
 </head>
   
@@ -23,19 +24,19 @@
         <a href="index.html" class="nav-link ps-blue">Home</a>
       </li>
       <li class="nav-item">
-        <a href="onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
+        <a href="/onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
       </li>
       <li class="nav-item">
-        <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
+        <a href="/webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
       </li>
       <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
+        <a href="/flashcards.html" class="nav-link ps-blue">Flashcards</a>
       </li>
       <li class="nav-item ">
         <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
       </li>
       <li class="nav-item ">
-        <a href="#" class="nav-link ps-blue">About</a>
+        <a href="/about.html" class="nav-link ps-blue">About</a>
       </li>
     </ul>
   </nav>
@@ -45,21 +46,21 @@
   <h2> Free Classical Math Education for Every Child </h2>
   <div class="row justify-content-center"> 
   <!-- first card -->
-    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
       <a href="https://pingnan.github.io/onlineClasses.html"> <img class="card-img-top" src="onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Free online classes </a> </p>
       </div>
     </div>
   <!-- second card -->
-    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
       <a href="https://pingnan.github.io/webTextbooks.html"> <img src="textbooks-profile.jpg" alt="Textbooks" style="width:100%"> </a>
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Free web textbooks </a> </p>
       </div>
     </div>
   <!-- third card -->      
-    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
         
         <a href="https://pingnan.github.io/flashcards.html"> <img src="flashcards-profile.jpg" alt="Flash Cards" style="width:100%"> </a>
         <div class="card-body">
@@ -71,7 +72,7 @@
   <h2> Education For Future Entrepreneurs </h2>
   <div class="row justify-content-center">
   <!-- fourth card -->      
-    <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
       <a href="poema-academy/index.html"> <img src="img/woodworking.jpg" alt="Flash Cards" style="width:100%"> </a>
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Poema Academy </p>
