--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -39,8 +39,8 @@
 
 <div class="row justify-content-center">
 <!-- first card -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="img/panda.jpg" alt="arithmetic class" style="width:100%">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <img src="/img/panda.jpg" alt="arithmetic class" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
       <p class="ps-sm ps-tangerine">
@@ -49,8 +49,8 @@
     </div>
   </div>
   <!-- second card -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="img/huski.jpg" alt="pre-algebra class" style="width:100%">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <img src="/img/huski.jpg" alt="pre-algebra class" style="width:100%">
   <div class="card-body">
     <p class="ps-tangerine ps-md"> Pre-algebra </p>
     <p class="ps-sm ps-tangerine">
@@ -60,8 +60,8 @@
     </div>
   </div> 
   <!-- third card -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <img src="img/flyingEagle.jpg" alt="algebra class" style="width:100%">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <img src="/img/flyingEagle.jpg" alt="algebra class" style="width:100%">
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Algebra </p>
         <p class="ps-sm ps-tangerine">
