--- a/webTextbooks.html
+++ b/webTextbooks.html
@@ -40,27 +40,27 @@
 <!-- first row -->
 <div class="row justify-content-center">
   <!-- first textbook -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <a href="/arithmetic/index.html"> 
-      <img src="img/panda.jpg" alt="free arithmetic textbook" style="width:100%">
+      <img src="/img/panda.jpg" alt="free arithmetic textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
     </div>
   </div>
   <!-- second textbook --> 
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px"> 
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px"> 
     <a href="/pre-algebra/index.html"> 
-      <img src="img/huski.jpg" alt="free pre-algebra textbook" style="width:100%">
+      <img src="/img/huski.jpg" alt="free pre-algebra textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Pre-algebra </p>
     </div>
   </div>    
   <!-- third textbook -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <a href="/algebra/index.html">
-      <img src="img/flyingEagle.jpg" alt="free algebra textbook" style="width:100%">
+      <img src="/img/flyingEagle.jpg" alt="free algebra textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Algebra </p>
@@ -70,27 +70,27 @@
 <!-- second row -->
 <div class="row justify-content-center my-4">
   <!-- fourth textbook -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-    <a href="geometry/index.html">
-      <img src="img/snail.jpg" alt="free geometry textbook" style="width:100%">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <a href="/geometry/index.html">
+      <img src="/img/snail.jpg" alt="free geometry textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Geometry </p>
     </div>
   </div>
   <!-- fifth textbook -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <a href="/pre-calculus/index.html">
-      <img src="img/functions.jpg" alt="free pre-calculus textbook" style="width:100%">
+      <img src="/img/functions.jpg" alt="free pre-calculus textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Pre-calculus </p>
       </div>
   </div>    
   <!-- sixth textbook -->
-  <div class="card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
     <a href="/calculus/index.html">
-      <img src="img/spaceShuttle.jpg" alt="free calculus textbook" style="width:100%">
+      <img src="/img/spaceShuttle.jpg" alt="free calculus textbook" style="width:100%">
     </a>
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Calculus </p>
