a little clean up

--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -11,6 +11,9 @@
   <!-- My external .css file -->
   <link rel="stylesheet" href="css/style.css">
   <style>
+    .card-body ul {
+      list-style-type: none;
+    }
   </style>
 </head>
 <body>
@@ -43,9 +46,9 @@
     <img src="/img/panda.jpg" alt="arithmetic class" style="width:100%">
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
-      <p class="ps-sm ps-tangerine">
-        Wednesday 3 pm
-      </p>
+      <ul class="ps-tangerine ps-sm">
+        <li> Wednesday 3 pm </li>
+      </ul>
     </div>
   </div>
   <!-- second card -->
@@ -53,10 +56,10 @@
     <img src="/img/huski.jpg" alt="pre-algebra class" style="width:100%">
   <div class="card-body">
     <p class="ps-tangerine ps-md"> Pre-algebra </p>
-    <p class="ps-sm ps-tangerine">
-      Monday 1 pm & 3 pm <br>
-      Friday 1 pm & 3 pm
-    </p>
+    <ul class="ps-tangerine ps-sm">
+      <li> Monday 1 pm & 3 pm </li>
+      <li> Friday 1 pm & 3 pm</li>
+    </ul>
     </div>
   </div> 
   <!-- third card -->
@@ -64,10 +67,10 @@
     <img src="/img/flyingEagle.jpg" alt="algebra class" style="width:100%">
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Algebra </p>
-        <p class="ps-sm ps-tangerine">
-          Monday 2 pm <br>
-          Friday 2 pm
-        </p>
+        <ul class="ps-tangerine ps-sm">
+          <li> Monday 2 pm </li>
+          <li> Friday 2 pm </li>
+        </ul>
       </div>                          
   </div>
 </div>
