working on Poema Academy page

--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <!-- My external .css file -->
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <style>
 </style>
 </head>
@@ -48,16 +48,17 @@
       Poema academy provides a brand new kind of education which is designed for the new economy and global marketplace. It is a two year high school where students are trained to become entrepreneurs. Graduates have the options of going to a college prep program, a trade school, or start a business.
   </p>
   <p>
-      The curriculum consists of four subjects:
-      <ul>
+      Our curriculum consists of five subjects:
+      <ul class="ps-comic ps-blue" style="font-size: 20px;">
           <li>Biblical Entrepreneurship</li>
           <li>Practical Math</li>
           <li>Practical English</li>
           <li>Computer Technology</li>
+          <li> Business operation </li>
       </ul>
   </p>
   <p>
-      Students will spend half day learning in school and half day work in different businesses with the objective of running a business.
+      Students will spend half day learning in school and half day work in different businesses with the objective of running a business. They are required to submit reports. 
   </p>
 
 </div>
