--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <style>
 
 </style>
+<!-- Favicon -->
+<link rel="icon" href="/img/favicon.png" type="image/png" sizes="16x16">
 </head>
   
 <body>
