moved all images to img folder

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
   <div class="row justify-content-center"> 
   <!-- first card -->
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-      <a href="https://pingnan.github.io/onlineClasses.html"> <img class="card-img-top" src="onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
+      <a href="https://pingnan.github.io/onlineClasses.html"> <img class="card-img-top" src="/img/onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Free online classes </a> </p>
       </div>
     </div>
   <!-- second card -->
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-      <a href="https://pingnan.github.io/webTextbooks.html"> <img src="textbooks-profile.jpg" alt="Textbooks" style="width:100%"> </a>
+      <a href="https://pingnan.github.io/webTextbooks.html"> <img src="/img/textbooks-profile.jpg" alt="Textbooks" style="width:100%"> </a>
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Free web textbooks </a> </p>
       </div>
@@ -64,7 +64,7 @@
   <!-- third card -->      
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
         
-        <a href="https://pingnan.github.io/flashcards.html"> <img src="flashcards-profile.jpg" alt="Flash Cards" style="width:100%"> </a>
+        <a href="https://pingnan.github.io/flashcards.html"> <img src="/img/flashcards-profile.jpg" alt="Flash Cards" style="width:100%"> </a>
         <div class="card-body">
           <p class="ps-tangerine ps-md">  Free flashcards  </p>
         </div>
