add more content to Poema Academy page

--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -45,7 +45,7 @@
 
   <div class="container">
   <p>
-      Poema academy provides a brand new kind of education which is designed for the new economy and global marketplace. It is a two year high school where students are trained to become entrepreneurs. Graduates have the options of going to a college prep program, a trade school, or start a business.
+      Poema academy provides a brand new kind of education which is designed for the new economy and global marketplace. It is a two year high school problem in which students are trained to become global entrepreneurs. Graduates have the options of going to a college prep program, a trade school, or start his or her business with the support of the school.
   </p>
   <p>
       Our curriculum consists of five subjects:
@@ -53,14 +53,13 @@
           <li>Biblical Entrepreneurship</li>
           <li>Practical Math</li>
           <li>Practical English</li>
-          <li>Computer Technology</li>
-          <li> Business operation </li>
+          <li>Business Information Technology</li>
+          <li>Business Operation </li>
       </ul>
   </p>
   <p>
-      Students will spend half day learning in school and half day work in different businesses with the objective of running a business. They are required to submit reports. 
+      Students will spend half day learning in school and half day working in different businesses with the objective of learning how to run a global business. They are required to submit weekly reports for fulfilling the requirements for Business Operation . 
   </p>
-
 </div>
 
 </body>
