add more content to About page

--- a/about.html
+++ b/about.html
@@ -42,17 +42,26 @@
 <div class="container">
   <p>
     <img src="img/Dr. Ping Profile Photo.jpg" alt="Dr. Ping's profile photo" style="float:left;width:200px;height:200px;" class="card shadow mr-4 border-0">
-    Hi, I am Dr. Ping. I retired from engineering in 2011 before I became a high school math teacher at a private Christian college prep school. That is where I realized why many American children are traumatized by math. So I decided to start my own teaching and tutoring ministry to help my students study math and appreciate its beauty and power. 
+    Hi, I am Dr. Ping. I am developing this website to offer free online math classes, free math textbooks, and free math practice flashcards. I plan to take no more than five years to finish this project. 
   </p>
   <p>
-    I felt in love with math when I was about 14 years old living in a company town in South Western China. A colleague of my dad showed me how to solve algbra problems that were presented as puzzels. I was hooked and spent a lot of time studying math on my own. Soon I went to college when I was only 15 years old. 
+  I retired from engineering in 2011 before becoming a high school math teacher at a private Christian college prep school. That is where I realized why many American children are traumatized by math. So I decided to start my own teaching and tutoring ministry to help my students study math on their own and appreciate its beauty and power. 
   </p>
-  <p>My math skills helped me won a scholorship to pursuie graduate studies in Canada. In 1995, I moved to Indianapolis to work as an senior engineer. Before I retired from engineering, I was granted 15 US patents.</p>
-  <p>In a way, math helped me escape from communist China and became an American citizen. It also helped me see the awesome power of a Creator and escape from Atheism to a personal relationship with Jesus Christ.</p>
   <p>
+    I felt in love with math when I was about 14 years old living in a company town in South Western China right after the terrible Cultural Revolution. A colleague of my dad showed me how to solve algebra problems that were presented as puzzles. I was hooked at once and spent a lot of time studying math on my own. A year later, I went to college more than 500 miles away from my home. I was very homesick for a couple of months, but got used to college life afterwards because I had the access to many books.
   </p>
-  </p>
+  <p>My math skills helped me won a scholarship to pursue graduate studies in Canada in 1984. That was the first time I had the taste of freedom. Eventually I got my Ph.D. in Electrical Engineering. In 1995, I moved to Indianapolis to work as an senior engineer in the telecommunications industry. Before I retired from engineering, I was granted 15 US patents.</p>
+  <p>In a way, math helped me escape from communist China and became an American citizen. More importantly, it also helped me see the awesome power of a Creator and escape from the indoctrination of Atheism to a personal relationship with Jesus Christ. From the perspective of Mathematics, Christian faith is the most reasonable. As a matter of fact, without the faith in a Creator, sciences have no logical foundation.</p>
+  <p>
+    I hope you can join me in this ministry. You can help proof-read my drafts and give me feedback on my explanation of key concepts. You can also donate to Poema Institute which is a 501(c)(3) organization that supports my work. 
 </div>
+
+<!-- Contact Us  -->
+<div class="row justify-content-center">
+  <div>
+    <a class="btn btn-primary ps-tangerine ps-sm my-5" style="color:white;" href="mailto:pingnan.shi@gmail.com">Email Dr. Ping</a>
+  </div>
+</div> 
 
 </body>
 </html>
