add Amazon banner

--- a/flashcards.html
+++ b/flashcards.html
@@ -16,24 +16,30 @@
   
 <body>
 <!-- Navbar -->
-<div class="sticky card shadow ps-bg-lightblue mx-4">
+<div class="sticky card shadow ps-bg-lightblue mx-4 d-flex">
   <nav class="navbar navbar-expand-sm">
     <ul class="navbar-nav ps-tangerine ps-sm">
       <li class="nav-item">
         <a href="index.html" class="nav-link ps-blue">Home</a>
       </li>
       <li class="nav-item">
-        <a href="onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
+        <a href="/onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
       </li>
       <li class="nav-item">
-        <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
+        <a href="/webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
       </li>
       <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
+        <a href="/flashcards.html" class="nav-link ps-blue">Flashcards</a>
+      </li>
+      <li class="nav-item ">
+        <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
+      </li>
+      <li class="nav-item ">
+        <a href="/about.html" class="nav-link ps-blue">About</a>
       </li>
     </ul>
   </nav>
-</div>  
+  </div>
 <!-- end of Navbar -->
     
 <h1> Math Practice Flashcards </h1>
