--- a/about.html
+++ b/about.html
@@ -17,27 +17,30 @@
   
 <body>
   <!-- Navbar -->
-  <div class="card shadow ps-bg-lightblue mx-4 d-flex">
-  <nav class="navbar navbar-expand-sm">
-    <ul class="navbar-nav ps-tangerine ps-sm">
-      <li class="nav-item">
-        <a href="index.html" class="nav-link ps-blue">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
-      </li>
-      <li class="nav-item">
-        <a href="webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
-      </li>
-      <li class="nav-item">
-        <a href="flashcards.html" class="nav-link ps-blue">Flashcards</a>
-      </li>
-      <li class="nav-item ">
-        <a href="#" class="nav-link ps-blue">About</a>
-      </li>
-    </ul>
-  </nav>
-</div>
+  <div class="sticky card shadow ps-bg-lightblue mx-4 d-flex">
+    <nav class="navbar navbar-expand-sm">
+      <ul class="navbar-nav ps-tangerine ps-sm">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link ps-blue">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
+        </li>
+        <li class="nav-item">
+          <a href="/webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
+        </li>
+        <li class="nav-item">
+          <a href="/flashcards.html" class="nav-link ps-blue">Flashcards</a>
+        </li>
+        <li class="nav-item ">
+          <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
+        </li>
+        <li class="nav-item ">
+          <a href="/about.html" class="nav-link ps-blue">About</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 <br><br><br>
 <div class="container">
   <p>
