--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -17,29 +17,29 @@
 <body>
   <!-- Navbar -->
   <div class="sticky card shadow ps-bg-lightblue mx-4 d-flex">
-  <nav class="navbar navbar-expand-sm">
-    <ul class="navbar-nav ps-tangerine ps-sm">
-      <li class="nav-item">
-        <a href="/index.html" class="nav-link ps-blue">Home</a>
-      </li>
-      <li class="nav-item">
-        <a href="/onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
-      </li>
-      <li class="nav-item">
-        <a href="/webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
-      </li>
-      <li class="nav-item">
-        <a href="/flashcards.html" class="nav-link ps-blue">Flashcards</a>
-      </li>
-      <li class="nav-item ">
-        <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
-      </li>
-      <li class="nav-item ">
-        <a href="#" class="nav-link ps-blue">About</a>
-      </li>
-    </ul>
-  </nav>
-</div>
+    <nav class="navbar navbar-expand-sm">
+      <ul class="navbar-nav ps-tangerine ps-sm">
+        <li class="nav-item">
+          <a href="index.html" class="nav-link ps-blue">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/onlineClasses.html" class="nav-link ps-blue">Online Classes</a>
+        </li>
+        <li class="nav-item">
+          <a href="/webTextbooks.html" class="nav-link ps-blue">Web Textbooks </a>
+        </li>
+        <li class="nav-item">
+          <a href="/flashcards.html" class="nav-link ps-blue">Flashcards</a>
+        </li>
+        <li class="nav-item ">
+          <a href="/poema-academy/index.html" class="nav-link ps-blue">Poema Academy</a>
+        </li>
+        <li class="nav-item ">
+          <a href="/about.html" class="nav-link ps-blue">About</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
     
   <h1> Poema Academy </h1>
 
@@ -50,10 +50,10 @@
   <p>
       Our curriculum consists of five subjects:
       <ul class="ps-comic ps-blue" style="font-size: 20px;">
-          <li>Biblical Entrepreneurship</li>
-          <li>Practical Math</li>
+          <li> <a href="/poema-academy/bib-entre/index.html" >Biblical Entrepreneurship </a></li>
+          <li> <a href="/poema-academy/prac-math/index.html">Practical Math</a></li>
           <li>Practical English</li>
-          <li>Business Information Technology</li>
+          <li><a href="/poema-academy/business-IT/index.html">Business Information Technology</a></li>
           <li>Business Operation </li>
       </ul>
   </p>
