--- a/poema-academy/prac-math/index.html
+++ b/poema-academy/prac-math/index.html
@@ -38,7 +38,7 @@
     <li class="list-group-item list-group-item-action ">VI: Interests</li>
     <li class="list-group-item list-group-item-action ">VII: Rates & Proportions</li>
     <li class="list-group-item list-group-item-action ">VIII: Measurements</li>
-    <li class="list-group-item list-group-item-action ">XI: Tools of computation</li>
+    <li class="list-group-item list-group-item-action ">IX: Tools of computation</li>
   </ul>
   <br>
 </div>
