changed time of each class and added Geometry

--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -53,7 +53,7 @@
     <div class="card-body">
       <p class="ps-tangerine ps-md"> Arithmetic </p>
       <ul class="ps-tangerine ps-sm">
-        <li> Wednesday 3 pm </li>
+        <li> Thursday 2 pm </li>
       </ul>
     </div>
   </div>
@@ -63,8 +63,8 @@
   <div class="card-body">
     <p class="ps-tangerine ps-md"> Pre-algebra </p>
     <ul class="ps-tangerine ps-sm">
-      <li> Monday 1 pm & 3 pm </li>
-      <li> Friday 1 pm & 3 pm</li>
+      <li> Tuesday 3 pm </li>
+      <li> Thursday 1 pm </li>
     </ul>
     </div>
   </div> 
@@ -74,8 +74,17 @@
       <div class="card-body">
         <p class="ps-tangerine ps-md"> Algebra </p>
         <ul class="ps-tangerine ps-sm">
-          <li> Monday 2 pm </li>
-          <li> Friday 2 pm </li>
+          <li> Tuesday 2:15 pm </li>
+        </ul>
+      </div>                          
+  </div>
+  <!-- third card -->
+  <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
+    <img src="/img/snail.jpg" alt="Geometry class" style="width:100%">
+      <div class="card-body">
+        <p class="ps-tangerine ps-md"> Geometry </p>
+        <ul class="ps-tangerine ps-sm">
+          <li> Tuesday 11 am </li>
         </ul>
       </div>                          
   </div>
