--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
       <a href="https://pingnan.github.io/onlineClasses.html"> <img class="card-img-top" src="/img/onlineClasses-profile.jpg" alt="online classes" style="width:100%"> </a>
       <div class="card-body">
-        <p class="ps-tangerine ps-md"> Free online classes </a> </p>
+        <p class="ps-tangerine ps-md"> Online classes </a> </p>
       </div>
     </div>
   <!-- second card -->
@@ -71,7 +71,7 @@
     </div>                          
   </div>
   <br><br>
-  <h2> Education For Future Entrepreneurs </h2>
+  <h2> Micro-schools </h2>
   <div class="row justify-content-center">
   <!-- fourth card -->      
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
