--- a/onlineClasses.html
+++ b/onlineClasses.html
@@ -44,7 +44,7 @@
   </nav>
   </div>
   <!-- end of Navbar -->
-<h1> Free Online Classes </h1>
+<h1> Online Classes </h1>
 
 <div class="row justify-content-center">
 <!-- first card -->
