--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
   <div class="row justify-content-center">
   <!-- fourth card -->      
     <div class="img-hover-zoom card shadow ps-bg-lightblue mx-4 my-1 rounded-bottom" style="width: 400px">
-      <a href="poema-academy/index.html"> <img src="img/woodworking.jpg" alt="Flash Cards" style="width:100%"> </a>
+      <a href="poema-academy/index.html"> <img src="/img/sun flower.jpg" alt="Sun flower" style="width:100%"> </a>
       <div class="card-body">
-        <p class="ps-tangerine ps-md"> Poema Academy </p>
+        <p class="ps-tangerine ps-md"> Poema Academy of Classical Mathematics </p>
       </div>
     </div>
   </div>                     
