--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -41,24 +41,29 @@
     </nav>
   </div>
     
-  <h1> Poema Academy </h1>
+  <h1> Poema Academy of Classical Mathematics</h1>
 
   <div class="container">
   <p>
-      Poema academy provides a brand new kind of education which is designed for the new economy and global marketplace. It is a two year high school problem in which students are trained to become global entrepreneurs. Graduates have the options of going to a college prep program, a trade school, or start his or her business with the support of the school.
-  </p>
-  <p>
-      Our curriculum consists of five subjects:
+      Poema academy provides a brand new kind of education that is designed for students to enjoy the beauty of mathematics and develop problem-solving and logical-thinking skills. It offers near free online classes as follows:.
+
       <ul class="ps-comic ps-blue" style="font-size: 20px;">
-          <li> <a href="/poema-academy/bib-entre/index.html" >Biblical Entrepreneurship </a></li>
-          <li> <a href="/poema-academy/prac-math/index.html">Practical Math</a></li>
-          <li>Practical English</li>
-          <li><a href="/poema-academy/business-IT/index.html">Business Information Technology</a></li>
-          <li>Business Operation </li>
+          <li><a href="/arithmetic/index.html" > Arithmetic </a></li>
+          <li><a href="/pre-algebra/index.html">Pre-algebra</a></li>
+          <li><a href="/algebra/index.html">Algebra</a></li>
+          <li><a href="/geometry/index.html">Geometry</a></li>
       </ul>
   </p>
   <p>
-      Students will spend half day learning in school and half day working in different businesses with the objective of learning how to run a global business. They are required to submit weekly reports for fulfilling the requirements for Business Operation . 
+      The following subjects will be added in the future:
+      <ul class="ps-comic ps-blue" style="font-size: 20px;">
+        <li>Pre-calculus</li>
+        <li>Calculus</li>
+        <li>Statistics</li>
+        <li>Trigonometry</li>
+        <li>Python: Introduction to Computer Science</li>
+        <li>Physics</li>
+      </ul> 
   </p>
 </div>
 
