--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -54,6 +54,7 @@
           <li><a href="/geometry/index.html">Geometry</a></li>
       </ul>
   </p>
+  <p> Students pay a monthly tuition of $19.99 to take up to two courses with 1 one-on-on tutoring session per month. Each course includes an half hour interactive lecture per week and homework assignments (no class on national holidays). Upon course completion, students will be given certificates.</p>
   <p>
       The following subjects will be added in the future:
       <ul class="ps-comic ps-blue" style="font-size: 20px;">
