--- a/poema-academy/index.html
+++ b/poema-academy/index.html
@@ -45,7 +45,7 @@
 
   <div class="container">
   <p>
-      Poema academy provides a brand new kind of education that is designed for students to enjoy the beauty of mathematics and develop problem-solving and logical-thinking skills. It offers near free online classes as follows:.
+      Poema academy provides a brand new kind of education that is designed for students to enjoy the beauty of mathematics and develop problem-solving and logical-thinking skills. It offers the following near free online classes:
 
       <ul class="ps-comic ps-blue" style="font-size: 20px;">
           <li><a href="/arithmetic/index.html" > Arithmetic </a></li>
