Add table of contents

--- a/geometry/index.html
+++ b/geometry/index.html
@@ -11,10 +11,39 @@
 <!-- My external .css file -->
 <link rel="stylesheet" href="../css/style.css">
 <style>
-
+  .my-tangerine {
+    font-family: "Tangerine", serif;
+  }
+  .my-comic {
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    }
+  li {
+    font-size: 24px;
+  }
+  body {
+    background-color: lightblue;
+  }
+  .container, .list-group-item {
+    background-color: lightblue;
+  }
 </style>
 </head>
 <body>
-    <h1>Under Construction</h1>
+    <div class="container card my-tangerine">
+        <h1 class="text-center display-1 text-primary"> Geometry </h1>
+        <ul class="card-4 list-group my-comic shadow">
+          <li class="list-group-item list-group-item-action list-group-item-primary">Introduction</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter I: Rules of Geometry</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter II: Triangles</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter III: Parallel Lines</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter IV: Quadrilaterals</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter V: Circles</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VI: Polygons</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VII: Solids </li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter VIII: Fun Problems</li>
+          <li class="list-group-item list-group-item-action list-group-item-primary">Chapter IX: Go Beyond</li>
+        </ul>
+        <br>
+    <</div>
 </body>
 </html>
