--- a/geometry/index.html
+++ b/geometry/index.html
@@ -11,26 +11,22 @@
 <!-- My external .css file -->
 <link rel="stylesheet" href="../css/style.css">
 <style>
-  .my-tangerine {
-    font-family: "Tangerine", serif;
-  }
   .my-comic {
     font-family: "Comic Sans MS", cursive, sans-serif;
     }
   li {
     font-size: 24px;
-  }
-  body {
-    background-color: lightblue;
+    color: blue;
   }
   .container, .list-group-item {
     background-color: lightblue;
+    color: blue;
   }
 </style>
 </head>
 <body>
     <div class="container card my-tangerine">
-        <h1 class="text-center display-1 text-primary"> Geometry </h1>
+        <h1> Geometry </h1>
         <ul class="card-4 list-group my-comic shadow">
           <li class="list-group-item list-group-item-action list-group-item-primary">Introduction</li>
           <li class="list-group-item list-group-item-action list-group-item-primary">Chapter I: Rules of Geometry</li>
