--- a/about.html
+++ b/about.html
@@ -48,15 +48,15 @@
     Hi, I am Dr. Ping. I am developing this website to offer free online math classes, free math textbooks, and free math practice flashcards. I plan to take no more than five years to finish this project. 
   </p>
   <p>
-  I retired from engineering in 2011 before becoming a high school math teacher at a private Christian college prep school. That is where I realized why many American children are traumatized by math. So I decided to start my own teaching and tutoring ministry to help my students study math on their own and appreciate its beauty and power. 
+  I retired from engineering in 2011 before becoming a high school math teacher at a private Christian college prep school. That is where I realized why many American children are traumatized by math. So I decided to start my own teaching and tutoring ministry in 2018 to help students study math on their own and appreciate its beauty and power. 
   </p>
   <p>
-    I felt in love with math when I was about 14 years old living in a company town in South Western China right after the terrible Cultural Revolution. A colleague of my dad showed me how to solve algebra problems that were presented as puzzles. I was hooked at once and spent a lot of time studying math on my own. A year later, I went to college more than 500 miles away from my home. I was very homesick for a couple of months, but got used to college life afterwards because I had the access to many books.
+    I felt in love with math when I was about 14 years old living in a company town in South Western China right after the terrible Cultural Revolution. A colleague of my dad showed me how to solve algebra problems that were presented as puzzles. I was hooked at once and spent a lot of time studying math on my own. A year later, I went to college more than 500 miles away from home. I was very homesick for a couple of months, but got used to college life afterwards because I had the access to many books.
   </p>
-  <p>My math skills helped me won a scholarship to pursue graduate studies in Canada in 1984. That was the first time I had the taste of freedom. Eventually I got my Ph.D. in Electrical Engineering. In 1995, I moved to Indianapolis to work as an senior engineer in the telecommunications industry. Before I retired from engineering, I was granted 15 US patents.</p>
+  <p>My math skills helped me win a special scholarship to pursue graduate studies in Canada in 1984. That was the first time I had the taste of freedom. Eventually I got my Ph.D. in Electrical Engineering. In 1995, I moved to Indianapolis to work as an senior engineer in the telecommunications industry. Before I retired from engineering, I was granted 15 US patents.</p>
   <p>In a way, math helped me escape from communist China and became an American citizen. More importantly, it also helped me see the awesome power of a Creator and escape from the indoctrination of Atheism to a personal relationship with Jesus Christ. From the perspective of Mathematics, Christian faith is the most reasonable. As a matter of fact, without the faith in a Creator, sciences have no logical foundation.</p>
   <p>
-    I hope you can join me in this ministry. You can help proof-read my drafts and give me feedback on my explanation of key concepts. You can also donate to Poema Institute which is a 501(c)(3) organization that supports my work. 
+    I hope you can join me in this ministry. You can help proof-read my drafts or give me feedback on my explanation of key concepts. You can also donate to Poema Institute which is a 501(c)(3) organization that supports my work. 
 </div>
 
 <!-- Contact Us  -->
