--- a/geometry/index.html
+++ b/geometry/index.html
@@ -40,6 +40,6 @@
           <li class="list-group-item list-group-item-action list-group-item-primary">Chapter IX: Go Beyond</li>
         </ul>
         <br>
-    <</div>
+    </div>
 </body>
 </html>
