--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
 </style>
 <!-- Favicon -->
 <link rel="icon" href="/img/favicon.png" type="image/png" sizes="16x16">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-187537036-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-187537036-1');
+</script>
 </head>
   
 <body>
