Add entrepreneurship paragraph.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
   </div>
     
   <h1> Poema Institute </h1>
+  <h2> Entrepreneurship Training to Every Teenagers </h2>
+  <div> In today's gloabal marketplace, entrepreneurship training is essential to middle and high school students to achieve financial freedom. 
+      The traditional school to college to middle class lifestyle education model no longer work for most college graduates. </div>
   <h2> Free Classical Math Education for Every Child </h2>
   <div class="row justify-content-center"> 
   <!-- first card -->
