--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
     
   <h1> Poema Institute </h1>
   <h2> Entrepreneurship Training to Every Teenagers </h2>
-  <h3 class="row justify-content-center ps-bg-lightblue"> 
+  <div class="row justify-content-center ps-tangerine ps-md"> 
     In today's global marketplace, entrepreneurship training is essential to middle and high school students to achieve financial freedom. 
     The traditional school to college to middle class lifestyle education model no longer work for most college graduates. 
-  </h3>
+  </div>
+  <hr>
   <h2> Free Classical Math Education for Every Child </h2>
   <div class="row justify-content-center"> 
   <!-- first card -->
