--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
     
   <h1> Poema Institute </h1>
   <h2> Entrepreneurship Training to Every Teenagers </h2>
-  <div class="row justify-content-center ps-arial ps-sm"> 
-    In today's global marketplace, entrepreneurship training is essential to middle and high school students to achieve financial freedom. 
-    The traditional school to college to middle class lifestyle education model no longer work for most college graduates. 
-  </div>
+  <div class="row justify-content-center ps-arial"> 
+    <p>
+      In today's global marketplace, entrepreneurship training is essential to middle and high school students to achieve financial freedom. 
+      The traditional school to college to middle class lifestyle education model no longer work for most college graduates. 
+    </p>
+ </div>
   <hr>
   <br>
   <br>
