--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="container ps-arial"> 
     <p>
       In today's global marketplace, entrepreneurship training is essential to middle and high school students to achieve financial freedom. 
-      The traditional school to college to middle class lifestyle education model no longer work for most college graduates. 
+      The traditional school to college to middle class lifestyle education model no longer works for most college graduates. 
     </p>
  </div>
   <hr>
